--- a/reddit-reader/ViewControllers/Base.lproj/Main.storyboard
+++ b/reddit-reader/ViewControllers/Base.lproj/Main.storyboard
@@ -34,22 +34,22 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <label clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" misplaced="YES" text="" lineBreakMode="tailTruncation" minimumFontSize="10" translatesAutoresizingMaskIntoConstraints="NO" id="nrq-HR-M1B">
-                                <rect key="frame" x="20" y="111" width="374" height="20.5"/>
+                            <label clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" text="  " lineBreakMode="tailTruncation" minimumFontSize="10" translatesAutoresizingMaskIntoConstraints="NO" id="nrq-HR-M1B">
+                                <rect key="frame" x="20" y="111" width="374" height="24"/>
                                 <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="20"/>
                                 <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="y46-zz-7NC">
-                                <rect key="frame" x="87" y="157.5" width="240" height="240"/>
+                                <rect key="frame" x="87" y="181.5" width="240" height="240"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="240" id="Qoi-CS-Hqg"/>
                                     <constraint firstAttribute="width" constant="240" id="wsk-8g-tNt"/>
                                 </constraints>
                             </imageView>
                             <label clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" text="Detail view content goes here" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" minimumFontSize="10" translatesAutoresizingMaskIntoConstraints="NO" id="0XM-y9-sOw">
-                                <rect key="frame" x="20" y="413.5" width="374" height="20.5"/>
+                                <rect key="frame" x="20" y="437.5" width="374" height="20.5"/>
                                 <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
@@ -62,7 +62,7 @@
                             <constraint firstItem="y46-zz-7NC" firstAttribute="top" secondItem="nrq-HR-M1B" secondAttribute="bottom" constant="46.5" id="20x-og-aXq"/>
                             <constraint firstItem="nrq-HR-M1B" firstAttribute="leading" secondItem="VUw-jc-0yf" secondAttribute="leading" constant="20" id="DKE-1E-UL4"/>
                             <constraint firstItem="0XM-y9-sOw" firstAttribute="top" secondItem="y46-zz-7NC" secondAttribute="bottom" constant="16" id="OEh-5Q-fGy"/>
-                            <constraint firstItem="y46-zz-7NC" firstAttribute="centerX" secondItem="nrq-HR-M1B" secondAttribute="centerX" id="T7U-eV-VfY"/>
+                            <constraint firstItem="y46-zz-7NC" firstAttribute="centerX" secondItem="VUw-jc-0yf" secondAttribute="centerX" id="Otk-Wk-6Kp"/>
                             <constraint firstItem="0XM-y9-sOw" firstAttribute="leading" secondItem="svH-Pt-448" secondAttribute="leading" constant="20" symbolic="YES" id="Tsc-yG-G1q"/>
                             <constraint firstItem="nrq-HR-M1B" firstAttribute="top" secondItem="VUw-jc-0yf" secondAttribute="top" constant="23" id="aA7-Oc-hEO"/>
                             <constraint firstAttribute="trailing" secondItem="0XM-y9-sOw" secondAttribute="trailing" constant="20" symbolic="YES" id="tHV-ZD-HQj"/>
